# project-starter-kit

./: index.html  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted--be0952fa-723b-46bb-a-2F-id-3Ar1l3-3A-32-Allow-attribute-will-take-precedence-over-allowpaymentreq-1763034081723_1763034081724.txt  Pasted--chunk-R6S4VRB5-js-v-c37c11b6-21551-Download-the-React-DevTools-for-a-better-development-experience--1762425423402_1762425423403.txt  Pasted-13The-source-list-for-the-Content-Security-Policy-direc_1767595508347.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-devt-1762425752432_1762425752432.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-devt-1762425821559_1762425821560.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-devt-1762425885104_1762425885105.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-devt-1762426545922_1762426545922.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-devt-1762428423810_1762428423810.txt
client/: index.html
client/src/: index.css  main.tsx
docs/: architecture-diagram.md
server/: app.py  config.py  index.ts  main.py  nlq_processor.py  requirements.txt  snowflake_connector.py
shared/: schema.ts
src/: App.tsx  index.css  main.tsx
src/lib/: authConfig.ts
supabase/: config.toml
(+28 files in other folders)
