[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "asyncio>=4.0.0",
    "azure-identity>=1.25.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "snowflake-connector-python>=3.17.3",
    "strands-agents>=1.6.0",
    "strands-agents-tools>=0.2.5",
    "cryptography>=45.0.7",
]
